# zoldyQ

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ZOLDYQ_ROADMAP.md  ZOLDYQ_SUMMARY.md  docker-compose.yml
.github/workflows/: ci.yml
benchmarks/: compare_rabbitmq.py  compare_redis.py  queue_benchmarks.rs  requirements.txt  run_all.sh
src/: lib.rs  main.rs
src/queue/: manager.rs  message.rs  message_queue.rs  mod.rs
src/resp/: handler.rs  mod.rs  server.rs  utils.rs
tests/: integration_tests.rs  lib.rs  message_queue_tests.rs  queue_manager_tests.rs
