[package]
name = "zoldyq"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
crossbeam = "0.8.4"
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# RESP protocol - using battle-tested library
redis-protocol = { version = "5.0", features = ["decode-logs"] }
bytes = "1.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "queue_benchmarks"
harness = false
